--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,11 @@
 <h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<p>Welcome to {{title}}. This is a basic website to practice CRUD/MVC principles with Express and MongoDB.</p>
+<h2>Dynamic content</h2>
+<p>The library has the following record counts:</p>
+<ul>
+  <li><strong>Books:</strong> {{data.bookCount}}</li>
+  <li><strong>Copies:</strong> {{data.bookInstanceCount}}</li>
+  <li><strong>Copies available:</strong> {{data.bookInstanceAvailableCount}}</li>
+  <li><strong>Authors:</strong> {{data.authorCount}}</li>
+  <li><strong>Genres:</strong> {{data.genreCount}}</li>
+</ul>
