--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,10 +1,37 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>{{title}}</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    {{{body}}}
-  </body>
+
+<head>
+  <title>{{title}}</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+  <link rel='stylesheet' href='/stylesheets/style.css' />
+</head>
+
+<body>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-sm-2">
+        <ul class="sidebar-nav">
+          <li><a href="catalog">Home</a></li>
+          <li><a href="/catalog/books">All books</a></li>
+          <li><a href="/catalog/authors">All authors</a></li>
+          <li><a href="/catalog/genres">All genres</a></li>
+          <li><a href="/catalog/bookInstances">All book instances</a></li>
+          <li><hr></li>
+          <li><a href="/catalog/book/create">Create new book</a></li>
+          <li><a href="/catalog/author/create">Create new author</a></li>
+          <li><a href="/catalog/genre/create">Create new genre</a>
+          <li><a href="/catalog/bookInstance/create">Create new book instance</a></li>
+        </ul>
+      </div>
+      <div class="col-sm-10">
+        {{{body}}}
+      </div>
+    </div>
+  </div>
+</body>
+
 </html>
