--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -15,7 +15,7 @@
     <div class="row">
       <div class="col-sm-2">
         <ul class="sidebar-nav">
-          <li><a href="catalog">Home</a></li>
+          <li><a href="/">Home</a></li>
           <li><a href="/catalog/books">All books</a></li>
           <li><a href="/catalog/authors">All authors</a></li>
           <li><a href="/catalog/genres">All genres</a></li>
