--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -17,9 +17,9 @@
         <ul class="sidebar-nav">
           <li><a href="/">Home</a></li>
           <li><a href="/catalog/books">All books</a></li>
+          <li><a href="/catalog/bookInstances">All book copies</a></li>
           <li><a href="/catalog/authors">All authors</a></li>
           <li><a href="/catalog/genres">All genres</a></li>
-          <li><a href="/catalog/bookInstances">All book instances</a></li>
           <li><hr></li>
           <li><a href="/catalog/book/create">Create new book</a></li>
           <li><a href="/catalog/author/create">Create new author</a></li>
