Add due date to book instance list view

--- a/views/bookInstanceList.hbs
+++ b/views/bookInstanceList.hbs
@@ -11,6 +11,7 @@
     <span class="text-danger">({{this.status}})</span>
     {{else}}
     <span class="text-warning">({{this.status}})</span>
+    <span>{{format this.due}}</span>
     {{/if}}
   </li>
   {{/each}}
