--- a/views/authorDetail.hbs
+++ b/views/authorDetail.hbs
@@ -1,6 +1,6 @@
 <h1>{{author.name}}</h1>
-{{#if (year author.dateOfBirth)}}
-<p>{{year author.dateOfBirth}}-{{year author.dateOfDeath}}</p>
+{{#if author.lifespan}}
+<p>{{author.lifespan}}</p>
 {{/if}}
 <h4>Books</h4>
 <div>
