--- a/views/bookInstanceDetail.hbs
+++ b/views/bookInstanceDetail.hbs
@@ -1,4 +1,4 @@
-<h1>Book instance {{bookInstance._id}}</h1>
+<h1>Book Instance {{bookInstance._id}}</h1>
 <p>
   <strong>Title: </strong><a href={{bookInstance.book.url}}>{{bookInstance.book.title}}</a>
 </p>
