Add genre deletion

--- a/views/genreDetail.hbs
+++ b/views/genreDetail.hbs
@@ -12,3 +12,4 @@
   <p>There are no books in this genre.</p>
   {{/if}}
 </div>
+<a href={{concat genre.url '/delete'}} class="text-danger">Delete genre</a>
