Add book deletion

--- a/views/bookDetail.hbs
+++ b/views/bookDetail.hbs
@@ -47,3 +47,5 @@
 {{else}}
 <p>There are no copies of this book.</p>
 {{/if}}
+<hr>
+<a href={{concat book.url '/delete'}} class="text-danger">Delete book</a>
