Add book instance creation/deletion

--- a/views/bookInstanceDetail.hbs
+++ b/views/bookInstanceDetail.hbs
@@ -23,3 +23,5 @@
 <p>
   <strong>ID: </strong><a href={{bookInstance.url}}>{{bookInstance._id}}</a>
 </p>
+<hr>
+<a href={{concat bookInstance.url '/delete'}} class="text-danger">Delete this copy</a>
