Add author deletion

--- a/views/authorDetail.hbs
+++ b/views/authorDetail.hbs
@@ -15,3 +15,5 @@
   <p>This author has no books in the library.</p>
   {{/if}}
 </div>
+<hr>
+<a href={{concat author.url '/delete'}} class="text-danger">Delete author</a>
