Add book update functionality

--- a/views/bookDetail.hbs
+++ b/views/bookDetail.hbs
@@ -48,4 +48,5 @@
 <p>There are no copies of this book.</p>
 {{/if}}
 <hr>
+<a href={{concat book.url '/update'}} class="text-primary d-block mb-2">Update book</a>
 <a href={{concat book.url '/delete'}} class="text-danger">Delete book</a>
