Add book instance delete functionality

--- a/views/bookInstanceDetail.hbs
+++ b/views/bookInstanceDetail.hbs
@@ -24,4 +24,5 @@
   <strong>ID: </strong><a href={{bookInstance.url}}>{{bookInstance._id}}</a>
 </p>
 <hr>
+<a href={{concat bookInstance.url '/update'}} class="text-primary d-block mb-2">Update this copy</a>
 <a href={{concat bookInstance.url '/delete'}} class="text-danger">Delete this copy</a>
