Add author update functionality

--- a/views/authorDetail.hbs
+++ b/views/authorDetail.hbs
@@ -16,4 +16,5 @@
   {{/if}}
 </div>
 <hr>
+<a href={{concat author.url '/update'}} class="text-primary d-block mb-2">Update author</a>
 <a href={{concat author.url '/delete'}} class="text-danger">Delete author</a>
