Create genre update functionality

--- a/views/genreDetail.hbs
+++ b/views/genreDetail.hbs
@@ -13,4 +13,5 @@
   {{/if}}
 </div>
 <hr>
+<a href={{concat genre.url '/update'}} class="text-primary d-block mb-2">Update genre</a>
 <a href={{concat genre.url '/delete'}} class="text-danger">Delete genre</a>
